--- a/account-service.yml
+++ b/account-service.yml
@@ -36,7 +36,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://${DOCKER_IP:192.168.99.100}:8181/uaa/user
+      userInfoUri: http://${DOCKER_IP:localhost}:8181/uaa/user
     client:
       client-id: acme
 eureka:
