--- a/account-service.yml
+++ b/account-service.yml
@@ -31,7 +31,7 @@ spring:
   datasource:
     url: jdbc:mysql://mysql:3306/dev
     username: root
-    password: dbpass
+    password: 123147
     initialize: true
 security:
   oauth2:
